--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        console.log("Hi, Ser Ray!")
+    </script>
     
 </body>
 </html>
