Finally, a function that selects a random computer weapon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        console.log("Hi, Ser Ray!")
-    </script>
+    <script src="main.js"></script>
     
 </body>
 </html>
